--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "@babel/preset-env": "^7.11.5",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
+    "mongoose": "^5.10.8",
     "morgan": "^1.10.0",
-    "pug": "^3.0.0"
+    "multer": "^1.4.2",
+    "pug": "^3.0.0",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.0.0"
   },
   "scripts": {
     "start": "nodemon --exec babel-node init.js --delay 2"
