--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "webpack-cli": "^4.0.0"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2"
   },
+  "dev:assets": "webpack",
   "devDependencies": {
     "nodemon": "^2.0.4"
   }
