--- a/package.json
+++ b/package.json
@@ -8,22 +8,31 @@
     "@babel/core": "^7.11.6",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.5",
+    "autoprefixer": "^10.0.1",
+    "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.2",
+    "css-loader": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
+    "mini-css-extract-plugin": "^1.0.0",
     "mongoose": "^5.10.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "postcss-loader": "^4.0.4",
     "pug": "^3.0.0",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.3",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.0.0"
   },
   "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js --delay 2"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore 'scss' ",
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cross-env WEBPACK_ENV=production webpack"
   },
-  "dev:assets": "webpack",
   "devDependencies": {
     "nodemon": "^2.0.4"
   }
