--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
     "autoprefixer": "^10.0.1",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.1",
     "helmet": "^4.1.1",
     "mini-css-extract-plugin": "^1.0.0",
     "mongoose": "^5.10.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
+    "passport-kakao": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
+    "passport-naver": "^1.0.6",
     "postcss-loader": "^4.0.4",
     "pug": "^3.0.0",
     "sass": "^1.27.0",
